--- a/only-buns/src/app/app.component.html
+++ b/only-buns/src/app/app.component.html
@@ -1,4 +1,4 @@
-<app-navbar/>
+<app-navbar></app-navbar>
 <div class="main-content">
-    <router-outlet/>
+    <router-outlet></router-outlet>
 </div>
