--- a/only-buns/src/styles.css
+++ b/only-buns/src/styles.css
@@ -1,3 +1,12 @@
+:root {
+    --primary-color: #1daae1; 
+    --secondary-color: #278ccb; 
+    --background-color: #f7f9fc;
+    --text-color: #333;
+    --error-color: #ff4d4f;
+    --accent-color: #ffb6c1;
+  }
+
 body{
     font-family: Arial, Helvetica, sans-serif;
 }
