--- a/only-buns/src/app/posts/post-feed/post-feed.component.html
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.html
@@ -1,18 +1,25 @@
-<div class="create-post-container">
-    <h2>Kreiraj novi post</h2>
-    <form [formGroup]="createPostForm" (ngSubmit)="onSubmit()">
-      <div>
-        <label for="file">Upload sliku zeca</label>
-        <input type="file" id="file" (change)="onFileChange($event)">
-        <img *ngIf="imagePreview" [src]="imagePreview" class="image-preview">
+<div class="post-feed">
+    <div *ngFor="let post of posts" class="post">
+      <div class="post-image">
+       <!-- <img [src]="post.imagePath" alt="Post Image" /> -->
+      </div>
+      
+      <div class="post-description">
+        <h3>{{ post.description }}</h3>
+      </div>
+      
+      <div class="post-likes">
+        <span>{{ post.likes }} Likes</span>
       </div>
   
-      <div>
-        <label for="description">Opis</label>
-        <input type="text" id="description" formControlName="description" placeholder="Unesite opis posta">
+      <!-- Prikaz komentara -->
+      <div class="post-comments">
+        <h4>Comments</h4>
+        <ul>
+          <li *ngFor="let comment of post.coments">
+            <strong>{{ comment.userId }}:</strong> {{ comment.text }}
+          </li>
+        </ul>
       </div>
-  
-      <button type="submit" [disabled]="createPostForm.invalid">Kreiraj post</button>
-    </form>
+    </div>
   </div>
-  
