--- a/only-buns/src/app/posts/post-feed/post-feed.component.html
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.html
@@ -24,6 +24,9 @@
       <button class="delete-button" (click)="deletePost(post.id)">
         <i class="fa fa-window-close" aria-hidden="true"></i> delete
       </button>
+      <button class="like-button" (click)="toggleLike(post.id)">
+        <i class="fa fa-thumbs-up" aria-hidden="true"></i> like
+      </button>
     </div>
 
     <div class="post-comments" *ngIf="showComments[post.id] && post.comments">
