--- a/only-buns/src/app/layout/navbar/navbar.component.css
+++ b/only-buns/src/app/layout/navbar/navbar.component.css
@@ -14,11 +14,15 @@
     font-family: Arial, sans-serif;
   }
   
-  .logo a {
-    font-size: 1.5rem;
-    font-weight: bold;
-    color: #262626;
-    text-decoration: none;
+  .center-nav-icons {
+    display: flex;
+    justify-content: center;
+    flex-grow: 1;
+  }
+
+  .logo {
+    position: absolute;
+    left: 2rem;
   }
   
   .nav-icons {
@@ -42,7 +46,8 @@
   }
   
   .user-menu {
-    position: relative;
+    position: absolute;
+    right: 2rem;
     cursor: pointer;
   }
   
