--- a/only-buns/src/app/layout/navbar/navbar.component.html
+++ b/only-buns/src/app/layout/navbar/navbar.component.html
@@ -36,10 +36,12 @@
         <ul class="nav-icons">
           <li><i class="fas fa-user-circle" (click)="toggleDropdown()"></i>
             <div *ngIf="dropdownOpen" class="dropdown">
-              <a routerLink="/settings" *ngIf="isAuthenticated">Settings</a>
+              <a routerLink="/settings" *ngIf="isAuthenticated"><i class="fa fa-cog" aria-hidden="true"></i> Settings</a>
+              <a routerLink="/all-users" *ngIf="isAdmin"><i class="fa fa-user" aria-hidden="true"></i> Users</a>
               <a (click)="isAuthenticated ? logout() : loginRedirect()">
-                {{ isAuthenticated ? 'Logout' : 'Login' }}
-              </a>              
+                <i class="fa fa-sign-out" aria-hidden="true"></i> {{ isAuthenticated ? 'Logout' : 'Login' }}
+              </a>  
+                          
             </div>
           </li>
         </ul>
