--- a/only-buns/src/app/posts/post-feed/post-feed.component.html
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.html
@@ -1,7 +1,7 @@
 <div class="post-feed">
   <div *ngFor="let post of posts" class="post">
     <div class="post-image">
-     <!-- <img [src]="post.imagePath" alt="Post Image" />-->
+     <img [src]="post.imagePath" alt="Post Image" />
     </div>
     
     <div class="post-description">
