refactor: post feed

--- a/only-buns/src/app/posts/post-feed/post-feed.component.css
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.css
@@ -1,131 +1,62 @@
-.post-feed {
-  display: flex;
-  flex-direction: column;
-  gap: 20px;
-  padding: 20px;
+.post-container {
   max-width: 600px;
-  margin: auto;
+  margin: 20px auto;
+  overflow: hidden;
 }
 
-.post {
-  border: 1px solid #ddd;
-  border-radius: 8px;
+.post-header {
+  display: flex;
+  align-items: center;
   padding: 15px;
-  background-color: #fff;
-  box-shadow: 0px 2px 5px rgba(0, 0, 0, 0.1);
+}
+
+.profile-image {
+  width: 40px;
+  height: 40px;
+  border-radius: 50%;
+  margin-right: 10px;
+}
+
+.username {
+  font-weight: bold;
+  color: #333;
 }
 
 .post-image img {
   width: 100%;
   height: auto;
-  border-radius: 8px;
 }
 
-.post-description h3 {
-  font-size: 1.2em;
-  margin: 10px 0;
-  color: #333;
+.post-content {
+  padding: 15px;
 }
 
 .post-likes {
-  font-size: 1em;
-  color: #555;
-  margin: 10px 0;
-}
-
-.post-comments h4 {
-  font-size: 1em;
-  margin-bottom: 5px;
-  color: #444;
-}
-
-.comment-card {
-  border-radius: 5px;
-  padding: 10px;
+  font-size: 0.9em;
+  color: #777;
   margin-bottom: 10px;
-  display: flex;
-  flex-direction: column;
 }
 
-.comment-header {
-  display: flex;
-  justify-content: space-between;
-  margin-bottom: 5px;
-  font-size: 0.9em;
-  color: #666;
-}
-
-.comment-header strong {
-  font-weight: bold;
-  color: #333;
-}
-
-.comment-time {
-  font-size: 0.8em;
-  color: #888;
-}
-
-.comment-text {
-  font-size: 0.9em;
+.post-description {
+  font-size: 1em;
   color: #555;
-  margin: 0;
-}
-.delete-button {
-  margin-left: 300px;
-  right: 10px;
-  background: none;
-  border: none;
-  color: #ff4d4d;
-  cursor: pointer;
-}
-.like-button{
-  right: 10px;
-  background: none;
-  border: none;
-  cursor: pointer;
-}
-.edit-button{
-  background: none;
-  border: none;
-  color: black;
-  cursor: pointer;
-}
-.comment-button{
-  background: none;
-  border: none;
-  color: black;
-  cursor: pointer;
-}
-.post-actions {
-  display: flex;
-  justify-content: space-between;
-  margin-top: 10px;
-}
-.add-comment {
-  display: flex;
-  align-items: center;
-  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
-.comment-input {
-  flex-grow: 1;
-  padding: 8px;
-  margin-right: 10px;
-  margin-left: 20px;
-  border-radius: 5px;
-  width: 450px;
-  border: 1px solid #ddd;
+.view-comments {
+  font-size: 0.9em;
+  color: #007BFF;
+  text-decoration: none;
 }
 
-.submit-comment-button {
-  padding: 8px 12px;
-  background-color: #4caf50;
-  color: white;
+.view-comments:hover {
+  text-decoration: underline;
+}
+
+.post-divider {
   border: none;
-  border-radius: 5px;
-  cursor: pointer;
+  height: 1px;
+  background-color: #ddd;
+  margin: 20px 0;
 }
 
-.submit-comment-button:hover {
-  background-color: #45a049;
-}
