--- a/only-buns/src/app/posts/post-feed/post-feed.component.css
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.css
@@ -28,7 +28,8 @@
 }
 
 .post-content {
-  padding: 15px;
+  padding-top: 15px;
+  padding-bottom: 15px;
 }
 
 .post-likes {
@@ -45,7 +46,7 @@
 
 .view-comments {
   font-size: 0.9em;
-  color: #007BFF;
+  color: var(--primary-color);
   text-decoration: none;
 }
 
@@ -58,5 +59,42 @@
   height: 1px;
   background-color: #ddd;
   margin: 20px 0;
+}
+
+.kebab-menu {
+  margin-left: auto;
+  font-size: 1.2em;
+  color: #777;
+  cursor: pointer;
+}
+
+.kebab-menu:hover {
+  color: #333;
+}
+
+.post-actopms{
+  margin-bottom: 30px;
+}
+
+.red {
+  padding-right: 10px;
+  padding-bottom: 10px;
+  color: var(--error-color);
+}
+
+.regular {
+  padding-right: 10px;
+  padding-bottom: 10px;
+  color: #333;
+}
+
+.interaction-button{
+  background-color: transparent;
+  border: 0px;
+  padding: 0;
+}
+
+i {
+  font-size: 1.5em;
 }
 
