--- a/only-buns/src/app/posts/post-feed/post-feed.component.css
+++ b/only-buns/src/app/posts/post-feed/post-feed.component.css
@@ -7,7 +7,7 @@
 .post-header {
   display: flex;
   align-items: center;
-  padding: 15px;
+  padding-bottom: 15px;
 }
 
 .profile-image {
@@ -62,7 +62,7 @@
 }
 
 .kebab-menu {
-  margin-left: auto;
+  margin-left: 420px; 
   font-size: 1.2em;
   color: #777;
   cursor: pointer;
@@ -97,4 +97,32 @@
 i {
   font-size: 1.5em;
 }
+
+.dropdown-menu {
+  position: absolute;
+  right: 0; 
+  top: 35px; 
+  background-color: white;
+  box-shadow: 0 2px 5px rgba(0, 0, 0, 0.2);
+  border-radius: 5px;
+  min-width: 120px; 
+  padding: 5px 0; 
+}
+
+.dropdown-item {
+  padding: 10px 15px;
+  border: none;
+  background: none;
+  text-align: left;
+  width: 100%;
+  cursor: pointer;
+  font-size: 14px;
+  color: #333;
+}
+
+.dropdown-item:hover {
+  background-color: #f0f0f0;
+}
+
+
 
